--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/tabla-detalle-fuentes-uso/tabla-detalle-fuentes-uso.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/tabla-detalle-fuentes-uso/tabla-detalle-fuentes-uso.component.html
@@ -19,6 +19,15 @@
             </div>
         </td>
     </ng-container>
+
+    <ng-container matColumnDef="fuente">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Fuente </th>
+      <td mat-cell *matCellDef="let element">
+          <div class="sub-item-table" *ngFor="let fuente of element.fuente ; let i = index">
+            {{ getFuenteFinanciacion( fuente ) }}
+          </div>
+      </td>
+  </ng-container>
   
     <ng-container matColumnDef="valorUso">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor del uso </th>
