--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/form-detallar-solicitud-novedad/form-detallar-solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/form-detallar-solicitud-novedad/form-detallar-solicitud-novedad.component.html
@@ -6,22 +6,39 @@
           <div class="row">
             <div class="col-md-8">
               <div class="row">
-                <div class="pr-1">
-                  <label class="label-left">Aportante nuevo:</label>
+                    <div class="pr-1">
+                        <label class="label-left" for="nuevoAportante" [ngClass]="{
+                            'color-secondaryColor':
+                              (aportante.get('nuevoAportante').invalid && aportante.get('nuevoAportante').touched) ||
+                              (aportante.get('nuevoAportante').invalid && estaEditando)
+                          }">Aportante nuevo?</label>
+                    </div>
+                    <div class="col">
+                        <mat-radio-group class="radioInput" formControlName="nuevoAportante" required>
+                            <mat-radio-button [value]="true">Sí</mat-radio-button>
+                            <mat-radio-button [value]="false">No</mat-radio-button>
+                        </mat-radio-group>
+                        <span class="required-form-group" style="margin-left: 1px;">*</span>
+                    </div>
+                    <span class="icon-incompleto">
+                        <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                            alt="este campo es requerido" [matTooltipPosition]="'above'"
+                            matTooltip="Debe ingresar la información en el campo para continuar"
+                            matTooltipClass="info-tooltip" *ngIf="
+                          (aportante.get('nuevoAportante').invalid && aportante.get('nuevoAportante').touched) ||
+                          (aportante.get('nuevoAportante').invalid && estaEditando)
+                          " />
+                    </span>
                 </div>
-                <div class="col mt-05em">
-                  <mat-checkbox class="example-margin" [formControl]="nuevoAportante"></mat-checkbox>
-                </div>
-              </div>
             </div>
-          </div>
-          <div class="row animatedDown" *ngIf="nuevoAportante.value">
+        </div>
+          <div class="row animatedDown" *ngIf="aportante.get('nuevoAportante').value">
             <div class="col-md-8">
               <div class="row">
                 <div class="pr-1">
                   <label
                     class="label-left"
-                    for="fase"
+                    for="tipoAportante"
                     [class.color-secondaryColor]="
                       (aportante.get('tipoAportante')?.invalid && aportante.get('tipoAportante').touched) ||
                       (aportante.get('tipoAportante')?.invalid && estaEditando)
@@ -37,7 +54,7 @@
                     <mat-select
                       required
                       formControlName="tipoAportante"
-                      (selectionChange)="getAportante($event.value, 0)"
+                      (selectionChange)="getAportante($event.value, j)"
                     >
                       <mat-option *ngFor="let listado of listaTipoAportante" [value]="listado.dominioId">
                        {{ listado.nombre }}
@@ -62,7 +79,7 @@
               </div>
             </div>
           </div>
-          <div class="row" *ngIf="nuevoAportante.value && aportante.get('tipoAportante').value == this.tipoAportante.ET">
+          <div class="row" *ngIf="aportante.get('nuevoAportante').value && aportante.get('tipoAportante').value == this.tipoAportante.ET">
             <div class="col-md-8">
               <div class="row">
                 <div class="pr-1">
@@ -83,10 +100,10 @@
                   >
                     <mat-select required 
                     formControlName="depaetamento"
-                    (selectionChange)="getMunAportante($event.value, 0)"
+                    (selectionChange)="getMunAportante($event.value, j)"
                     >
                       <mat-option
-                        *ngFor="let listado of listadoDepto[0]"
+                        *ngFor="let listado of listadoDepto[j]"
                         [value]="listado.localizacionId"
                         class="capitalize"
                       >
@@ -112,7 +129,7 @@
               </div>
             </div>
           </div>
-          <div class="row" *ngIf="nuevoAportante.value && aportante.get('tipoAportante').value == this.tipoAportante.ET">
+          <div class="row" *ngIf="aportante.get('nuevoAportante').value && aportante.get('tipoAportante').value == this.tipoAportante.ET">
             <div class="col-md-8">
               <div class="row">
                 <div class="pr-1">
@@ -131,9 +148,9 @@
                   <mat-form-field class="select-width">
                     <mat-select 
                     formControlName="municipio"
-                    (selectionChange)="getVigenciaByMun($event.value, 0)">
+                    (selectionChange)="getVigenciaByMun($event.value, j)">
                       <mat-option
-                        *ngFor="let listado of listadoMun[0]"
+                        *ngFor="let listado of listadoMun[j]"
                         [value]="listado.localizacionId"
                         class="capitalize"
                       >
@@ -176,9 +193,9 @@
                     <mat-select
                       required
                       formControlName="nombreAportante"
-                      (selectionChange)="getVigencia($event.value, 0)"
+                      (selectionChange)="getVigencia($event.value, j)"
                     >
-                      <mat-option *ngFor="let listado of listaNombreAportantes[0]" [value]="listado">
+                      <mat-option *ngFor="let listado of listaNombreAportantes[j]" [value]="listado">
                         {{ listado }}
                       </mat-option>
                     </mat-select>
@@ -201,7 +218,7 @@
               </div>
             </div>
           </div>
-          <div class="row" *ngIf="nuevoAportante.value">
+          <div class="row" *ngIf="aportante.get('nuevoAportante').value">
             <div class="col-md-8">
               <div class="row">
                 <div class="pr-1">
@@ -222,7 +239,7 @@
                       formControlName="cofinanciacionAportanteId"
                       (selectionChange)="changeAportante(j)"
                     >
-                      <mat-option *ngFor="let listado of listaVigencias[0]" [value]="listado.cofinanciacionAportanteId">
+                      <mat-option *ngFor="let listado of listaVigencias[j]" [value]="listado.cofinanciacionAportanteId">
                         Vigencia:{{ listado.vigencia }} Creado el:{{ listado.fechaCreacion | date: 'dd/MM/yyyy' }}
                       </mat-option>
                     </mat-select>
@@ -245,7 +262,7 @@
               </div>
             </div>
           </div>
-          <div class="row" *ngIf="!nuevoAportante.value">
+          <div class="row" *ngIf="!aportante.get('nuevoAportante').value">
             <div class="col-md-8">
               <div class="row">
                 <div class="pr-1">
@@ -695,7 +712,7 @@
           type="button"
           class="btn-eliminar animatedOpacity"
           *ngIf="aportantes.controls.length > 1"
-          (click)="borrarArray(j, i)"
+          (click)="borrarAportante(j)"
         >
           <img src="assets/img/icon/menos.svg" alt="Eliminar componente" />
           Eliminar Aportante
@@ -706,7 +723,7 @@
           color="warn"
           type="button"
           class="btn-eliminar animatedOpacity"
-          *ngIf="aportantes.controls.length < listaAportantes.length"
+          *ngIf="aportantes.controls.length < (listaAportantes.length + listaTotalNuevas.length) "
           (click)="addAportante()"
         >
           <img src="assets/img/icon/mas.svg" alt="Agregar otro componente" />
