--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-descuentos-gog/form-descuentos-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-descuentos-gog/form-descuentos-gog.component.html
@@ -278,7 +278,7 @@
                                                                                             currencyMask
                                                                                             [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }"
                                                                                             formControlName="valorDescuento"
-                                                                                            (ngModelChange)="checkTotalDiscountValues( i, j, k, l );"
+                                                                                            (ngModelChange)="checkValueDescuento( $event, i, j, k, l ); checkTotalDiscountValues( i, j, k, l );"
                                                                                             onKeyPress="if(this.value.length>=this.maxLength) return false;">
                                                                                 </mat-form-field>
                                                                                 <span   class="contador"
