--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
@@ -114,6 +114,6 @@
   </mat-card>
 <!--SOLO PARA EFECTOS DE MAQUETACIÓN-->
 <div class="text-center mb-3em mt-2em animatedDown" *ngIf="addressForm.get('requiereTransladoRecursos').value === true" >
-    <a routerLink="/gestionarBalanceFinancieroTrasladoRecursos/registrarTraslado" mat-raised-button color="accent" class="btn-cargar-proyecto">Registrar traslado</a><br>  
+    <a [routerLink]="[ '/gestionarBalanceFinancieroTrasladoRecursos/registrarTraslado', id ]" mat-raised-button color="accent" class="btn-cargar-proyecto">Registrar traslado</a><br>  
 </div>
 <app-tabla-traslados-gbftrec *ngIf="addressForm.get('requiereTransladoRecursos').value === true"></app-tabla-traslados-gbftrec>
