--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/ver-detalle-tramite/ver-detalle-tramite.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/ver-detalle-tramite/ver-detalle-tramite.component.html
@@ -152,7 +152,7 @@
               <strong>
                 Estado del proceso:
               </strong>
-              {{ novedad.estadoProcesoCodigo }}
+              {{ novedad.estadoProcesoNombre }}
             </p>
             <p>
               <strong>
@@ -164,7 +164,7 @@
               <strong>
                 Nombre del abogado que realizó la revisión
               </strong>
-             {{ novedad.abogadoRevisionId }}
+             {{ novedad.nombreAbogado }}
             </p>
           </mat-card-content>
         </mat-card>
