--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-interventoria/validar-novedad-contrato-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-interventoria/validar-novedad-contrato-interventoria.component.html
@@ -133,7 +133,7 @@
               {{ novedad.instanciaNombre }}
             </span>
           </p>
-          <p>
+          <p *ngIf="novedad.instanciaNombre !== 'No aplica'">
             <strong> Fecha de la sesión de la instancia: </strong>
             {{ novedad.fechaSesionInstancia | date: 'dd/MM/yyyy' }}
           </p>
