--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/ver-detalle-solic-nov-intervn/ver-detalle-solic-nov-intervn.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/ver-detalle-solic-nov-intervn/ver-detalle-solic-nov-intervn.component.html
@@ -126,7 +126,7 @@
               {{ novedad.instanciaNombre }}
             </span>
           </p>
-          <p>
+          <p *ngIf="novedad.instanciaNombre !== 'No aplica'">
             <strong> Fecha de la sesión de la instancia: </strong>
             {{ novedad.fechaSesionInstancia | date: 'dd/MM/yyyy' }}
           </p>
