--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/informacion-general/informacion-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/informacion-general/informacion-general.component.html
@@ -15,7 +15,7 @@
             </mat-card-content>
         </mat-card>
 
-        <app-tabla-datos-solicitud></app-tabla-datos-solicitud>
+        <app-tabla-datos-solicitud [listProyectos]="solicitudPago.contratoSon.listProyectos[1]"></app-tabla-datos-solicitud>
     </mat-expansion-panel>
 
     <mat-expansion-panel class="expansion-style sub-expansion">
