--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-orden-giro/form-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-orden-giro/form-orden-giro.component.html
@@ -32,8 +32,7 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Seleccionar </th>
                 <td mat-cell *matCellDef="let element; index as i" align="center">
                     <section class="example-section">
-                        <mat-checkbox [formControl]="element.get( 'check' )" (click)="addProject( element.get( 'contratacionProyectoId' ).value, i )">
-                        </mat-checkbox>
+                        <mat-checkbox [formControl]="element.get( 'check' )" (ngModelChange)="addProject( i )"></mat-checkbox>
                     </section>
                 </td>
             </ng-container>
@@ -44,161 +43,8 @@
     </div>
 </div>
 <!--Solo para efectos de maquetación-->
-<div *ngIf="this.idContrato!=null" class="animatedDown">
-    <mat-card class="shipping-card var-main-gris">
-        <mat-card-header class="header-card header-card--margin">
-            <mat-card-title class="header-card--text textoGris">
-                ODG_obra_222
-            </mat-card-title>
-        </mat-card-header>
-        <mat-card-content align="left">
-            <p><strong>Fecha de aprobación fiduciaria: </strong><em>15/11/2020</em></p>
-            <p><strong>Modalidad del contrato: </strong><em>Modalidad 1</em></p>
-            <p><strong>Número del contrato: </strong><em>N801801</em></p>
-            <p><strong>Valor facturado: </strong><em>$15.000.000</em></p>
-            <p><strong>Valor pagado: </strong><em>$10.000.000</em></p>
-        </mat-card-content>
-    </mat-card>
-    <p class="info-container" style="margin-top: 2em;">
-        <span class="info-text sin-diligenciar">Sin diligenciar</span>
-        <span class="info-text en-proceso">En proceso</span>
-        <span class="info-text completo">Completo</span>
-    </p>
-    <mat-accordion>
-        <mat-expansion-panel class="expansion-style">
-            <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title ">
-                    Información general
-                </mat-panel-title>
-            </mat-expansion-panel-header>
-            <mat-accordion>
-                <mat-expansion-panel class="expansion-style sub-expansion">
-                    <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title ">
-                            Datos de la solicitud
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <app-datos-solicitud-gbftrec></app-datos-solicitud-gbftrec>
-                </mat-expansion-panel>
-            </mat-accordion>
-            <mat-accordion>
-                <mat-expansion-panel class="expansion-style sub-expansion">
-                    <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title ">
-                            Datos DDP y DRP
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <app-datos-ddp-drp-gbftrec></app-datos-ddp-drp-gbftrec>
-                </mat-expansion-panel>
-            </mat-accordion>
-            <mat-accordion>
-                <mat-expansion-panel class="expansion-style sub-expansion">
-                    <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title ">
-                            Soportes de factura
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <mat-card class="shipping-card var-main-gris">
-                        <mat-card-content align="left">
-                            <p><strong>URL con soporte:
-                                </strong><em>https://drive.google.com/drive/registrodecontroversiacontractual/soportedefacturaSolPagoO001-N801801</em>
-                            </p>
-                        </mat-card-content>
-                    </mat-card>
-                </mat-expansion-panel>
-            </mat-accordion>
-            <mat-accordion>
-                <mat-expansion-panel class="expansion-style sub-expansion">
-                    <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title ">
-                            Tercero de giro
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <p class="info-sub-title textoGrisVar">
-                        <span>Nombre del contratista: <b>Interventores S.A.</b></span>
-                        <span>Número de identificación: <b>900.879.765-2</b></span>
-                    </p>
-                    <mat-card class="shipping-card var-main-gris">
-                        <mat-card-content align="left">
-                            <p><strong>¿Cuál es el medio de pago para los giros del contrato?:
-                                </strong><em>Transferencia electrónica</em></p>
-                            <p><strong>Titular de la cuenta: </strong><em>Depósito de pinturas SAS</em></p>
-                            <p><strong>Número de identificación del titular: </strong><em>950.789.897-2</em></p>
-                            <p><strong>Número de cuenta: </strong><em>4563-9876-2453-3245</em></p>
-                            <p><strong>Banco: </strong><em>Bancolombia</em></p>
-                            <p><strong>Tipo de cuenta: </strong><em>Corriente</em></p>
-                        </mat-card-content>
-                    </mat-card>
-                </mat-expansion-panel>
-            </mat-accordion>
-        </mat-expansion-panel>
-
-        <mat-expansion-panel class="expansion-style">
-            <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title sin-diligenciar">
-                    Detalle del giro
-                </mat-panel-title>
-            </mat-expansion-panel-header>
-            <mat-accordion>
-                <mat-expansion-panel class="expansion-style sub-expansion">
-                    <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title ">
-                            Porcentajes de participación
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <app-tabla-porc-participacion-gbftrec></app-tabla-porc-participacion-gbftrec>
-                </mat-expansion-panel>
-            </mat-accordion>
-            <mat-accordion>
-                <mat-expansion-panel class="expansion-style sub-expansion">
-                    <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title ">
-                            Información fuente de recursos
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <app-tabla-infofrecursos-gbftrec></app-tabla-infofrecursos-gbftrec>
-                </mat-expansion-panel>
-            </mat-accordion>
-            <mat-accordion>
-                <mat-expansion-panel class="expansion-style sub-expansion">
-                    <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title sin-diligenciar">
-                            Tercero de causación
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <mat-card class="shipping-card var-main-gris">
-                        <mat-card-content align="left">
-                            <p><strong>Número de identificación del contratista: </strong><em>900.879.765-2</em></p>
-                            <p><strong>Nombre de contratista: </strong><em>Interventores S.A.</em></p>
-                            <p><strong>Número de factura: </strong><em>FAC00456</em></p>
-                        </mat-card-content>
-                    </mat-card>
-                    <p class="info-sub-title textoGrisVar">
-                        <span>Valor neto de giro: <em>$15.000.000</em></span>
-                        <span>Nuevo valor resgistrado: <em>$0</em></span>
-                    </p>
-                    <mat-accordion>
-                        <mat-expansion-panel class="expansion-style sub-expansion-black">
-                            <mat-expansion-panel-header class="expansion-style--header">
-                                <mat-panel-title class="expansion-style--title sin-diligenciar">
-                                    Costo variable
-                                </mat-panel-title>
-                            </mat-expansion-panel-header>
-                            <app-form-costo-variable-gbftrec></app-form-costo-variable-gbftrec>
-                        </mat-expansion-panel>
-                    </mat-accordion>
-                    <mat-accordion>
-                        <mat-expansion-panel class="expansion-style sub-expansion-black">
-                            <mat-expansion-panel-header class="expansion-style--header">
-                                <mat-panel-title class="expansion-style--title sin-diligenciar">
-                                    Tipo de pago 3
-                                </mat-panel-title>
-                            </mat-expansion-panel-header>
-                           <app-form-tipo-pago-gbftrec></app-form-tipo-pago-gbftrec>
-                        </mat-expansion-panel>
-                    </mat-accordion>
-                </mat-expansion-panel>
-            </mat-accordion>
-        </mat-expansion-panel>
-    </mat-accordion>
+<div *ngIf="ordenesGiro.length > 0">
+    <div *ngFor="let ordenGiro of ordenesGiro.controls; index as i">
+        <app-form-orden-giro-seleccionada [ordenGiro]="ordenGiro"></app-form-orden-giro-seleccionada>
+    </div>
 </div>
