--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-drp-gbftrec/tabla-drp-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-drp-gbftrec/tabla-drp-gbftrec.component.html
@@ -1,37 +1,48 @@
-<div class="table-responsive" style="margin-top: 2em;">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+<section class="table-responsive tabla-gris mt-3em">
+    <table mat-table [dataSource]="dataSource" matSort>
+  
         <ng-container matColumnDef="uso">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Uso </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.uso }} </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color" style="width: 28%;"> Uso </th>
+          <td mat-cell *matCellDef="let element" align="center"> {{ element.nombreUso }} </td>
         </ng-container>
+
+        <ng-container matColumnDef="fuente">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 20%;"> Fuente </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let fuente of element.fuentes">
+              {{ fuente.nombreFuente }}
+            </div>
+          </td>
+        </ng-container>
+  
         <ng-container matColumnDef="aportante">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Aportante </th>
-            <td mat-cell *matCellDef="let element" class="padding-0em" align="center">
-                <div class="sub-item-table flex-table justify-content-center align-items-center h-3em"
-                    *ngFor="let el of element.aportante ; let i = index">
-                    {{el.nombre}}
-                </div>
-            </td>   
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 20%;"> Aportante </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let aportante of element.aportante">
+              {{ aportante.nombreAportante }}
+            </div>
+          </td>
         </ng-container>
+  
         <ng-container matColumnDef="valorUso">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor de uso </th>
-            <td mat-cell *matCellDef="let element" class="padding-0em" align="center">
-                <div class="sub-item-table flex-table justify-content-center align-items-center h-3em"
-                    *ngFor="let el of element.valorUso ; let i = index">
-                    {{el.valor}}
-                </div>
-            </td>   
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color" style="width: 15%;"> Valor de uso </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let valorUso of element.valorUso">
+              ${{ valorUso }}
+            </div>
+          </td>
         </ng-container>
-        <ng-container matColumnDef="saldoActualUso">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo actual de uso </th>
-            <td mat-cell *matCellDef="let element" class="padding-0em" align="center">
-                <div class="sub-item-table flex-table justify-content-center align-items-center h-3em"
-                    *ngFor="let el of element.saldoActualUso ; let i = index">
-                    {{el.saldo}}
-                </div>
-            </td>   
+  
+        <ng-container matColumnDef="saldoActual">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 28%;"> Saldo actual de uso </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let saldoActualUso of element.saldoActualUso">
+              ${{ saldoActualUso }}
+            </div>
+          </td>
         </ng-container>
+    
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-</div>
+</section>
