Fase-2-Paquete-5 enable open minute url

--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-incorporacion-rendimientos/components/aprobar-incorporacion-rendimientos/aprobar-incorporacion-rendimientos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-incorporacion-rendimientos/components/aprobar-incorporacion-rendimientos/aprobar-incorporacion-rendimientos.component.html
@@ -57,7 +57,7 @@
                         Ver registros incorporados
                     </button>
                     <button mat-raised-button color="accent" class="btn-table" *ngIf="element.fechaActa"  
-                        (click)="downloadMinute(element.registerId)">
+                        (click)="downloadMinute(element.rutaActa)">
                        Descargar Acta
                     </button>
                 </td>
